--- a/views/cdn.pug
+++ b/views/cdn.pug
@@ -42,7 +42,7 @@ block content
                           li Transfer: #[strong 0.049 - 0.185 $/GB]
                           li Free storage (up to 50GB)
                           li Points of presence: 32
-                          li Transfer discounts start from 30TB
+                          li Transfer discounts start from 21TB
                           li Minimum recharge: #[strong $149]<br>
                             | (valid for 1 year)
                           li
@@ -53,7 +53,7 @@ block content
                       +pricing-card("CloudFront")
                         ul
                           li Transfer: #[strong 0.085 - 0.25 $/GB]
-                          li Free storage
+                          li Storage price - #[a(href="/files-storage") as for S3]
                           li
                             a(rel="nofollow" target="_blank", href="http://serverfault.com/questions/613199/does-amazon-cloudfront-charge-for-storage") Transfer between data centers:<br>
                             | #[strong 0.020 - 0.16 $/GB]
@@ -61,7 +61,7 @@ block content
                             | #[strong 0.0075 - 0.016 $]
                           li 10,000 HTTPS requests:<br>
                             | #[strong 0.01 - 0.022 $]
-                          li Points of presence: 37
+                          li Points of presence: 87
                           li
                             +amazon-signup
                   #cdn-subscriptions.tab-pane(role="tabpanel")
