--- a/views/cloud.pug
+++ b/views/cloud.pug
@@ -20,30 +20,48 @@ block content
             +pricing-card('AWS')
               ul
                 li #[a(href="https://aws.amazon.com/free/" target="_blank") Free tier] for the first 12 months
+                li Some services have free forever tiers
                 li More features than competition
                 li Longest time on market<br>
                   | (more 3rd party libraries,<br>
                   | better documentation)
                 li
+                  .li-filler21
+                  .li-filler25
+                  .li-filler25
+                  .li-filler38
+                  .li-filler38
                   +aws-signup
             +pricing-card('Google Cloud')
               ul
                 li $300 free credits to spend during first 12-months
+                li #[a(href="https://cloud.google.com/free/docs/always-free-usage-limits" target="_blank") Always Free tier]:<br>
+                  | 1 f1-micro VPS, 1GB NoSQL DB,<br>
+                  | 28 hours/day of Google App Engine,<br>
+                  | 5GB of cloud storage, 2 000 000 cloud functions invocations and more
                 li
-                  a(href="https://cloud.google.com/free/docs/always-free-usage-limits" target="_blank") "Always Free" tier
-                li
-                  .li-filler21
+                  .li-filler16
                   .li-filler21
                   .li-filler25
+                  .li-filler38
+                  .li-filler38
+                  .li-filler38
                   +gcp-signup
             +pricing-card('Azure')
               ul
-                li 30 days free trial (with $200 free credits)
+                li 30 days free trial with $200 free credits
+                li Free for 12 months:<br>
+                  | 750 hours/month of<br>
+                  | Linux and Windows VM,<br>
+                  | 2x 64GB managed disks,<br>
+                  | 5GB of File storage,<br>
+                  | 250GB SQL database and more
+                li #[a(href="https://azure.microsoft.com/en-us/free/") Always free tier]:<br>
+                  | 10 web, mobile or API apps,<br>
+                  | 1 000 000 serverless functions/month<br>
+                  | and more
                 li Good support for Windows application
                 li
-                  .li-filler21
-                  .li-filler21
-                  .li-filler25
                   +azure-signup
         .container
           section.row.mt5.mb5
