--- a/views/domain.pug
+++ b/views/domain.pug
@@ -49,11 +49,11 @@ block content
                   span &nbsp;for&nbsp;
                   span.label.label-default.price__label .org
                 li
-                  span No &nbsp;
+                  span.b $42.99
+                  span &nbsp;for&nbsp;
                   span.label.label-default.price__label .io
-                  span &nbsp;domain
                 li
-                  span.b $12.99
+                  span.b $37.99
                   span &nbsp;for&nbsp;
                   span.label.label-default.price__label .pizza
                 li
@@ -64,13 +64,13 @@ block content
                   span #[strong $14.99] (#[strong $0.99] first year) for&nbsp;
                   span.label.label-default.price__label .com
                 li
-                  span #[strong $16.99] (#[strong $2.99] first year) for&nbsp;
+                  span #[strong $19.99] (#[strong $0.99] first year) for&nbsp;
                   span.label.label-default.price__label .org
                 li
-                  span #[strong $49] (#[strong $34.99] first year) for&nbsp;
+                  span #[strong $49.99] (#[strong $34.99] first year) for&nbsp;
                   span.label.label-default.price__label .io
                 li
-                  span #[strong $99] (#[strong $39.99] first year) for&nbsp;
+                  span #[strong $69.99] (#[strong $39.99] first year) for&nbsp;
                   span.label.label-default.price__label .pizza
                 li
                   +1and1-signup
