--- a/views/errors.pug
+++ b/views/errors.pug
@@ -23,12 +23,13 @@ block content
               ul
                 li Free plan with:<br>
                   | 10,000 events per month<br>
+                  | 7 days data retention
                   | 1 user
                 li Paid plans starting at #[strong $26]/month:<br>
                   | 100,000 events per month<br>
+                  | 90 days data retention
                   | Unlimited users
                 li Pre-pay annually or pay on-demand
-                li 90 days data retention
                 li
                   a(rel="nofollow" target="_blank", href="https://github.com/getsentry/sentry") Open source version<br>
                   | that you can host yourself
@@ -46,19 +47,19 @@ block content
                 li Unlimited users
                 li
                   .li-filler21
-                  .li-filler21
-                  .li-filler25
                   +rollbar-signup
             +pricing-card('Airbrake')
               ul
                 li
                   a(rel="nofollow" target="_blank", href="https://airbrake.io/account/new/free") Free plan (1 user &amp; 1 project)<br>
-                  | Paid plans starting at #[strong $49]/month
-                li 25 errors/minute
-                li 30 days data retention
+                  | 25 errors/minute<br>
+                  | 30 days data retention
+                li Paid plans starting at #[strong $49]/month:<br>
+                  | 5 applications monitored<br>
+                  | 5 team members
                 li 30 days free trial
-                li 5 application monitored
-                li 5 team members
                 li
-                  .li-filler38
+                  .li-filler21
+                  .li-filler21
+                  .li-filler25
                   +airbrake-signup
