--- a/views/files-storage.pug
+++ b/views/files-storage.pug
@@ -34,7 +34,7 @@ block content
                   li Standard Storage #[strong 0.021 - 0.026 $]
                   li Infrequent Access Storage #[strong 0.0125 - 0.026 $]
                   li Glacier Storage #[strong 0.007 - 0.012 $]
-                  li Transfering data out #[strong 0.05 - 0.25 $/GB]<br>
+                  li Transferring data out #[strong 0.05 - 0.25 $/GB]<br>
                     | First GB per month is free
                   li Free transfer to EC2 (in the same region)
                   li
