--- a/public/css/partials/_functional.scss
+++ b/public/css/partials/_functional.scss
@@ -231,6 +231,7 @@
 .light-grey { color: rgba(0, 0, 0, .5) !important; }
 .dark-grey { color: #3c4858 !important; }
 .blue { color: #03a9f4 !important; }
+.white { color: #fff !important; }
 // Background colors (colors taken from the _colors.scss of material)
 .bg-green { background-color: #4caf50 !important; }
 .bg-blue { background-color: #03a9f4 !important; }
