Someone decided to sponsor the website :)
* Updates the description of CI and some styles.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -65,6 +65,11 @@ pre.copy {
   font-size: $bigger-font;
 }
 
+.company-logo {
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+
 //////////////////////// General rules - for each website ////////////////////
 
 p {
