--- a/views/monitoring.pug
+++ b/views/monitoring.pug
@@ -21,6 +21,7 @@ block content
                 li 5 minutes check rate
                 li 50 monitors
                 li 1 location
+                li Free status pages
                 li
                   span Content matching&nbsp;
                     i.material-icons.material-icon--pricing-table(data-toggle="tooltip" data-placement="top" title="Check if a specific keyword exists or not exists in a web page") help
@@ -29,19 +30,20 @@ block content
                 li
                   span Free email-to-SMS&nbsp;
                     i.material-icons.material-icon--pricing-table(data-toggle="tooltip" data-placement="top" title="If you have a phone number from one of the supported GSM providers, you can get SMS notifications for free") help
-                li (optional) $15 for 50 SMS
+                li (optional) $15 for 100 SMS
                 li
                   +uptimerobot-signup
             +pricing-card('StatusCake', 'col-xs-12 col-sm-4')
               ul
                 li Free
-                li 5 minutes check rate
-                li Unlimited monitors
+                li 15 minutes check rate
+                li 10 monitors
                 li 1 random location
+                li Paid status pages
                 li No content matching
                 li Shows average response time
-                li Integration with email, webhooks, Twitter, Hipchat, Pushbullet, Pushover, Slack, PagerDuty, VictorOps, OpsGenie
+                li Integration with over 10 different services (email, webhooks, Twitter, Pushbullet, etc.)
                 li No email-to-SMS
-                li (optional) $15 for 50 SMS
+                li (optional) $7.49 for 50 SMS
                 li
                   +statuscake-signup
