--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -149,6 +149,7 @@ p {
 // take enough vertical space that we don't need to specify heights on the cards
 // You can combine them together
 .li-filler4 { height: 4px; }
+.li-filler5 { height: 5px; }
 .li-filler16 { height: 16px; }
 .li-filler21 { height: 21px; }
 .li-filler25 { height: 25px; }
