--- a/views/cdn.pug
+++ b/views/cdn.pug
@@ -1,11 +1,11 @@
 extends layout
 //----------------------------------- MIXINS --------------------------------//
+mixin keycdn-signup
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.keycdn.com") Open KeyCDN
 mixin cdn77-signup
   a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.cdn77.com/?utm_source=deploystack&utm_campaign=bonus-signup&utm_medium=affiliate") Open CDN77
 mixin amazon-signup
   a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://aws.amazon.com/cloudfront/") Open CloudFront
-mixin maxcdn-signup
-  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.maxcdn.com/") Open MaxCDN
 mixin cloudflare-signup
   a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.cloudflare.com/") Open Cloudflare
 //- Coupon codes modal buttons
@@ -37,7 +37,20 @@ block content
                 .tab-content.text-center
                   #cdn-pay-as-you-go.tab-pane.active(role="tabpanel")
                     .row
-                      +pricing-card("CDN77", "col-xs-12 col-sm-4 col-sm-offset-2")
+                      +pricing-card("KeyCDN")
+                        ul
+                          li Transfer: #[strong 0.04 - 0.16 $/GB]
+                          li Free pull (#[a(rel="nofollow" target="_blank", href="https://www.keycdn.com/support/push-storage-pricing") paid push]) storage
+                          li Points of presence: 30+
+                          li Transfer discounts start from 40TB
+                          li Minimum usage: #[strong $49] per year<br>
+                            | (credits expire after 1 year)
+                          li
+                            .li-filler38
+                            .li-filler25
+                            .li-filler25
+                            +keycdn-signup
+                      +pricing-card("CDN77")
                         ul
                           li Transfer: #[strong 0.049 - 0.185 $/GB]
                           li Free storage (up to 50GB)
@@ -61,21 +74,12 @@ block content
                             | #[strong 0.0075 - 0.016 $]
                           li 10,000 HTTPS requests:<br>
                             | #[strong 0.01 - 0.022 $]
-                          li Points of presence: 87
+                          li Points of presence: 138
                           li
                             +amazon-signup
                   #cdn-subscriptions.tab-pane(role="tabpanel")
                     .row
-                      +pricing-card("MaxCDN", "col-xs-12 col-sm-4 col-sm-offset-2")
-                        ul
-                          li 100GB/month (2 PoP): #[strong $9]
-                          li 500GB/month (3 PoP): #[strong $39]
-                          li 1TB/month (5 PoP): #[strong $79]
-                          li $15 per month to use PoP outside of US and Europe
-                          li $12 per year for each additional PoP
-                          li
-                            +maxcdn-signup
-                      +pricing-card("CloudFlare")
+                      +pricing-card("CloudFlare", "col-xs-12 col-sm-4 col-sm-offset-4")
                         ul
                           li #[strong Free] package: 3 page rules
                           li #[strong $20]/month: 20 page rules
@@ -83,11 +87,9 @@ block content
                           li DDoS protection <br>
                             | (24/7/365 uptime in higher plans)
                           li
-                            .li-filler21
-                            .li-filler25
                             +cloudflare-signup
           .row.mt6
             .col-sm-12
               h3 Why should I use a CDN?
               p Most common benefit is the speed improvement - content of your website is distributed in different Points of Presence around the world. Each time someone visits your website, the CDN will deliver the files from the closest location, making you website load faster. Also, using a CDN can save you some bandwith, as the large files will no longer be served from your servers.
-              p Having a CDN can help you in case of a DDoS attack (Distributed Denial-of-Service). Instead of all the traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than the average (in which case, you are probably terribly overpaying for the hosting most of the time :) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
+              p Having a CDN can help you in case of a DDoS attack (Distributed Denial-of-Service). Instead of all the traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than the average (in which case, you are probably terribly overpaying for the hosting most of the time ;) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
